# SCAMP

./: .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build_container_image.sh  check_format.sh  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmarks.yml  build-and-test-cuda.yml  build-and-test.yml  cpu-benchmarks.yml  cuda-build.yml  distributed-build.yml  docker-build-and-push.yml  docker-build.yml  formatter.yml  pyscamp-build.yml  python-publish-test.yml  python-publish.yml  standard-build.yml  ubuntu-cuda-build.yml
SampleInput/: dataset.txt  random5.txt  randomlist512K.txt  randomlist8K.txt  sampleClass0.txt  sampleClass1.txt  testA.txt  testB.txt  testC.txt  unknown0
aws/: distributed_matrix_profile_ab_join.sh  distributed_matrix_profile_self_join.sh  get_mp_tiled.py  run_job.sh  run_job_ab_join.sh  run_job_postprocess.py  run_job_preprocess.sh  run_job_self_join.sh  run_specific_tile_self_join.sh  run_tile_self_join.sh  split_ts.py
cmake/: FindAVX.cmake  SCAMPMacros.cmake
cpu-benchmarks/linux-stable/clang++-10/bench/: data.js
cpu-benchmarks/linux-stable/clang++/bench/: data.js
cpu-benchmarks/linux-stable/g++/bench/: data.js
cpu-benchmarks/macos-latest/clang++/bench/: data.js
cpu-benchmarks/macos-latest/g++/bench/: data.js
cpu-benchmarks/ubuntu-latest/clang++/bench/: data.js
cpu-benchmarks/ubuntu-latest/g++/bench/: data.js
cpu-benchmarks/windows-latest/cl/bench/: data.js
cpu-benchmarks/windows-latest/clang-cl/bench/: data.js
docs/source/: cli.rst  conf.py  distributed.rst  docker.rst  environment.rst  faq.rst  index.rst  interpreting_output.rst  intro.rst  performance.rst  profiles.rst
docs/source/data/: pyscamp-vs-mpf-cpu.csv  pyscamp-vs-stumpy-cpu-and-geforce.csv  pyscamp-vs-stumpy-cpu-and-multi-p100.csv
docs/source/images/: pyscamp-vs-stumpy-cpu-and-multi-p100.csv
docs/source/pyscamp/: intro.rst  kwargs.rst  pyscamp.rst
docs/source/scripts/: pyscamp-compare-mpf.py  pyscamp-compare-stumpy.py
gpu-benchmarks/bench/: data.js
kubernetes/: CMakeLists.txt  client.yaml  distributed_job.cpp  distributed_job.h  distributed_tile.cpp  distributed_tile.h  greeter_client.cc  greeter_server.cc  helloworld.proto  job_list.cpp  scamp.proto  scamp_client.cc  scamp_client.cc.1  scamp_interface.cpp  scamp_interface.h  scamp_server.cc  scamp_worker.cpp  scamp_worker.h  server.yaml  service.yaml  utils.cpp  utils.h
kubernetes/config/: client.yaml.template  server.yaml.template
macos-latest/clang++/bench/: data.js
macos-latest/g++/bench/: data.js
proto/: CMakeLists.txt  SCAMP.proto
python/: SCAMP_python.cpp
src/: Makefile  SCAMP.cpp  SCAMP.cu  SCAMP.h  SCAMPWorker.cpp  SCAMPWorker.h  SCRIMP.cu  SCRIMP.h  common.cpp  common.h  cpu_kernels.cpp  cpu_kernels.h  cpu_stats.cpp  cpu_stats.h  defines.h  fft_helper.cpp  fft_helper.cu  fft_helper.h  fft_kernels.cu  gpu_stats.cu  gpu_stats.h  kernel_common.cpp  kernel_common.h  kernel_gpu_utils.cu  kernel_gpu_utils.h  kernels.cu  kernels.h  kernels_compute.h  kernels_inner_loop.h  kernels_smem.h  main.cpp  profile.cpp  qt_helper.cpp  qt_helper.h  qt_kernels.h  scamp_args.cpp  scamp_interface.cpp  scamp_utils.cpp  scamp_utils.h  tile.cpp  (+4 more)
src/benchmark/: CMakeLists.txt  benchmarks.cpp  common.cpp  common.h  cpu_benchmarks.cpp  gpu_benchmarks.cpp
src/common/: CMakeLists.txt  common.cpp  common.h  profile.h  scamp_args.cpp  scamp_args.h  scamp_exception.h  scamp_interface.cpp  scamp_interface.h  scamp_utils.cpp  scamp_utils.h
src/core/: CMakeLists.txt  SCAMP.cpp  SCAMP.h  cpu_kernels.cpp  cpu_kernels.h  cpu_stats.cpp  cpu_stats.h  kernel_common.cpp  kernel_common.h  kernel_gpu_utils.cu  kernel_gpu_utils.h  kernels.cu  kernels.h  kernels_compute.h  qt_helper.cpp  qt_helper.h  qt_kernels.cu  qt_kernels.h  tile.cpp  tile.h
src/core/cpu_kernel/: CMakeLists.txt  cpu_kernels.cpp  cpu_kernels.h  kernel_dispatcher.cpp  kernel_dispatcher.h
src/core/cpu_kernel/avx/: CMakeLists.txt  dispatch_avx.cpp  dispatch_avx.h
src/core/cpu_kernel/avx2/: CMakeLists.txt  dispatch_avx2.cpp  dispatch_avx2.h
src/core/cpu_kernel/baseline/: CMakeLists.txt  dispatch_baseline.cpp  dispatch_baseline.h
src/core/gpu_kernel/: CMakeLists.txt  kernel_gpu_utils.cu  kernel_gpu_utils.h  kernels.cu  kernels.h  kernels_compute.h  kernels_smem.h
src/distributed/: CMakeLists.txt  distributed_job.cpp  distributed_job.h  distributed_tile.cpp  job_list.cpp  job_list.h  scamp.proto  scamp_interface.cpp  scamp_interface.h  scamp_worker.cpp  utils.cpp  utils.h
src/distributed/config/: client.yaml.template  create_gke_cluster.sh  server.yaml.template
src/python/: CMakeLists.txt  SCAMP_python.cpp
test/: StompABJoin.m  difference.py  distance_matrix_fast.py  dot2s.m  mpx.m  musigtest.m  pySCAMPtest.py  randlist.py  randwalk.py  run_intel_emulation_tests.sh  run_tests.py  run_tests.sh  test_common.py  test_docker.sh  test_pyscamp.py  test_python_module.py
test/SampleInput/: earthquake_precision_test100K.txt  poorly_conditioned_test.txt  randomlist128K.txt  randomlist16K.txt  randomlist256K.txt  randomlist32K.txt  randomlist64K.txt  randomwalk16K.txt  randomwalk1K_nan.txt  randomwalk32K.txt  randomwalk64K.txt  randomwalk64K_nan.txt  randomwalk8K.txt
test/SampleOutput/: mp_randomwalk16K_randomwalk32K_w100.txt  mp_randomwalk16K_w100.txt  mp_randomwalk32K_randomwalk16K_w100.txt  mp_randomwalk32K_w100.txt  mp_randomwalk64K_nan_w100.txt  mp_randomwalk64K_w100.txt  mp_randomwalk8K_w100.txt  mpi_randomwalk16K_randomwalk32K_w100.txt  mpi_randomwalk16K_w100.txt  mpi_randomwalk32K_randomwalk16K_w100.txt  mpi_randomwalk32K_w100.txt  mpi_randomwalk64K_nan_w100.txt  mpi_randomwalk64K_w100.txt  mpi_randomwalk8K_w100.txt
travis/: centos_build_inside_docker.sh  fedora_build_inside_docker.sh  setup_centos_tests.sh  setup_fedora_tests.sh
ubuntu-latest/clang++/bench/: data.js
ubuntu-latest/g++/bench/: data.js
windows-latest/cl/bench/: data.js
